--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -7,9 +7,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-
+  
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700;800&family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,500&family=Inter:wght@200;400&family=Karla:wght@400;700&family=Libre+Franklin:wght@300&family=Outfit&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700;800&family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,500&family=Inter:wght@200;400&family=Karla:wght@400;700&family=Libre+Franklin:wght@300&family=Outfit:wght@700&display=swap');
+
+
+
     .attribution { font-size: 11px; text-align: center;  }
     .attribution a { color: hsl(228, 15%, 55%); }
 
@@ -63,8 +70,34 @@
    
     border-radius: 5px;
     }
-    .p{
-      font-size: 14px;
+    .yahoo{
+      font-family: 'Epilogue', sans-serif;
+      font-family: 'Fraunces', serif;
+      font-family: 'Inter', sans-serif;
+      font-family: 'Karla', sans-serif;
+      font-family: 'Libre Franklin', sans-serif;
+      font-family: 'Outfit', sans-serif;
+    }
+
+    h2{
+      font-family: 'Epilogue', sans-serif;
+      font-family: 'Fraunces', serif;
+      font-family: 'Inter', sans-serif;
+      font-family: 'Karla', sans-serif;
+      font-family: 'Libre Franklin', sans-serif;
+      font-family: 'Outfit', sans-serif;
+    }
+    .obm{
+      font-family: 'Epilogue', sans-serif;
+      font-family: 'Fraunces', serif;
+      font-family: 'Inter', sans-serif;
+      font-family: 'Karla', sans-serif;
+      font-family: 'Libre Franklin', sans-serif;
+      font-family: 'Outfit', sans-serif;
+      margin-top: -12px;
+      margin-right:70px;
+      display: flex;
+      justify-content: center;
     }
 
   </style>
@@ -84,10 +117,10 @@
           <div class="box">
             <div class="text">
               <h2>Inprove your front-end <br>Skills by bulding projects</h2>
-              <p>
+              <p class="yahoo">
                 Scan the QR code to visit Frontend <br> mentor and take your coding skills 
               </p>
-              <p>to the next level </p>
+              <p class="obm">to the next level </p>
             </div>
           </div>
 
@@ -97,12 +130,7 @@
     </div>
 
 
-
-
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Yılmaz Keskin</a>
-  </div>
+ 
 </body>
 </html>
